--- a/MeetingApp.csproj
+++ b/MeetingApp.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+  
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.Scaffolding.Shared" Version="7.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
   </ItemGroup>
 
@@ -20,7 +22,6 @@
   <ItemGroup>
     <AdditionalFiles Include="Views\Home\Index.cshtml" />
     <AdditionalFiles Include="Views\Meeting\Apply.cshtml" />
-    <AdditionalFiles Include="Views\Meeting\Index.cshtml" />
     <AdditionalFiles Include="Views\Meeting\List.cshtml" />
   </ItemGroup>
 
